[tool.poetry]
name = "ao3_track_cli"
version = "0.1.0"
description = ""
authors = ["TrebbleBiscuit <TrebbleBiscuit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ao3-api = "^2.3.0"
questionary = "^2.0.1"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
